fix xxxl breakpoint footer overflow

--- a/packages/portal/src/assets/scss/footer.scss
+++ b/packages/portal/src/assets/scss/footer.scss
@@ -16,10 +16,10 @@
     @media (min-width: $bp-xxxl) {
       top: 0.75vw;
       left: 0;
-      right: -1.125vw;
+      right: 0;
       bottom: 0;
       background-color: $innovationblue;
-      clip-path: polygon(0 0, calc(100% - calc(95 / 16 * 1vw)) 0, 100% calc(209 / 16 * 1vw), 100% 100%, 0 100%);
+      clip-path: polygon(0 0, calc(100% - calc(77 / 16 * 1vw)) 0, 100% calc(170 / 16 * 1vw), 100% 100%, 0 100%);
     }
   }
 
